--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-   <h1>Hello world</h1> 
+    <h1>Resume</h1>
+    <img src="abir.jpg" height="150">
+    <hr>
+
+    <h1>Educataion</h1>
+    <br>
+    <table border="1">
+        <tr>
+            <th>Course</th>
+            <th>Insitute</th>
+            <th>Year</th>
+            <th>Result</th>
+        </tr>
+        <tr>
+            <td>Bsc in CSE</td>
+            <td>Green University</td>
+            <td>2024</td>
+            <td>3.00</td>
+        </tr>
+        <tr>
+            <td>HSC</td>
+            <td>Gangni High School</td>
+            <td>2020</td>
+            <td>3.00</td>
+        </tr>
+
+    </table>
+    <br>
+
+    <h1>Internship</h1>
+    <p>Self Employment</p>
+    <br>
+    <i>Software Devoloper Internship</i>
+    <ul>
+        <li>Coding is truly refreshing and fulfilling, providing me with constant challenges and excitement. It motivates me to wake up every day and discover the new problems I need to solve and the experiences that will help me tackle them.</li>
+        <li>The best problem solvers are those who love the process of solving problems. They are not motivated by the end result, but by the challenge of finding a solution. They are curious and persistent, and they are always looking for new ways to improve.</li>
+
+    </ul>
+
+    <hr>
+    <h3>Contract with me</h3>
+    <br>
+    <p>Email: <u>sheikhabir196@gmail.com</u></p>
+    <a href="https://www.facebook.com/">Facebook</a>
+    <a href="https://www.linkedin.com/in/washeikh-al-abir/"> <img src="linkedin.png" height="25"></a>
+    <a href="https://github.com/Al-Abir"> <img src="Github.jpeg" height="25"></a>
+
+    <h1>
+        Registration Form
+    </h1>
+    <br>
+     <p1> First name:  </p1>
+     <input type="text" placeholder="Please Enter your First name">
+     <br><br>
+     <p1> Last name:  </p1>
+     <input type="text" placeholder="Please Enter your Last name">
+     <br> <br>
+     <p1> Email Add:  </p1>
+     <input type="text" placeholder="Please Enter your Last name">
+     <br> <br>
+     <p1> Password :  </p1>
+     <input type="password" placeholder="Password">
+     <br> <br>
+
+     <p1>gender</p1>
+     <input type="radio" value = "male"> Male
+     <input type="radio" value = "Female"> Male
+   <br> <br>
+   <label for = id1>
+    <input type="checkbox" value="Math" name="class" id="id1"> Math
+   </label>
+   <label for = id1>
+    <input type="checkbox" value="English" name="class" id="id1"> English
+   </label>
+   <label for = id1>
+    <input type="checkbox" value="CSE" name="class" id="id1"> CSE
+   </label>
+   <br> <br>
+   <select name="City" id ="City">
+            
+    <option value ="Dhaka">Dhaka</option>
+    <option value ="Gangni">Gangni</option>
+    <option value ="Dhaka">Meherpur</option>
+
+   </select>
+   <br> <br>
+   <input type="submit" placeholder="submit">
+   <input type="reset">
+     <br> <br>
+   <textarea name="feedback" id="feedback" placeholder="Please add Feedback"> feed back </textarea>
+   <br> <br>  <br>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4?si=vUEIkX8p-_S74y42" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+   <br> <br>
+   
+   <video height = "512" src = "video.mkv" controls> My video </video>
 </body>
+
 </html>
