--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
      <p1> Password :  </p1>
      <input type="password" placeholder="Password">
      <br> <br>
+     <form>
+        <p1>gender</p1>
+        <input type="radio" value = "male" name="clases"> Male
+        <input type="radio" value = "Female" name="clases"> female
 
-     <p1>gender</p1>
-     <input type="radio" value = "male"> Male
-     <input type="radio" value = "Female"> Male
+     </form>
+    
+   
    <br> <br>
    <label for = id1>
     <input type="checkbox" value="Math" name="class" id="id1"> Math
@@ -99,10 +103,13 @@
      <br> <br>
    <textarea name="feedback" id="feedback" placeholder="Please add Feedback"> feed back </textarea>
    <br> <br>  <br>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/HcOc7P5BMi4?si=vUEIkX8p-_S74y42" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/UmnCZ7-9yDY?si=jnh_pUrmxJuuZ4c9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <br> <br> <br>
 
-   <br> <br>
+
+   <iframe width="560" height="315"  src="https://en.wikipedia.org/wiki/Wikipedia:About"> </iframe>
    
+ <br> <br> <br>
    <video height = "512" src = "video.mkv" controls> My video </video>
 </body>
 
